force-app/main/default/objects/Student__c/fields/Branch_HOD__c.field-meta.xml
<CustomField>
    <fullName>Branch_HOD__c</fullName>
    <formula>Branch_Name__c  &amp; &quot;-&quot;  &amp;    Branch_Parent_ID__r.HOD_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch - HOD</label>
    <type>Text</type>
</CustomField>