force-app/main/default/objects/Student__c/fields/Branch_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_Parent_ID__c</fullName>
    <label>Branch Parent ID</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>