force-app/main/default/objects/Student__c/fields/Course_Fees__c.field-meta.xml
<CustomField>
    <fullName>Course_Fees__c</fullName>
    <label>Course Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>