force-app/main/default/objects/Student__c/fields/HOD_Name__c.field-meta.xml
<CustomField>
    <fullName>HOD_Name__c</fullName>
    <formula>Branch_Parent_ID__r.HOD_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOD Name</label>
    <type>Text</type>
</CustomField>