force-app/main/default/objects/Student__c/validationRules/Course_fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_fee</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE(Course_Fees__c ) &gt; Course_Fees__c</errorConditionFormula>
    <errorMessage>Course Fees cannot be Decreased</errorMessage>
</ValidationRule>