force-app/main/default/objects/Student__c/validationRules/CouseFeeMultiple100.validationRule-meta.xml
<ValidationRule>
    <fullName>CouseFeeMultiple100</fullName>
    <active>false</active>
    <errorConditionFormula>MOD( Course_Fees__c ,100) &lt;&gt; 0  || 
Course_Fees__c &lt;= 0  ||
ISBLANK(Course_Fees__c)</errorConditionFormula>
    <errorDisplayField>Course_Fees__c</errorDisplayField>
    <errorMessage>Course Fees must be a multiple of 100 only.</errorMessage>
</ValidationRule>