force-app/main/default/objects/Student__c/validationRules/Enrollment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Date</fullName>
    <active>false</active>
    <errorConditionFormula>DAY( Enrollment_Date__c)&gt;=15</errorConditionFormula>
    <errorDisplayField>Enrollment_Date__c</errorDisplayField>
    <errorMessage>Enrollment Date cannot be after the 15th day of month.</errorMessage>
</ValidationRule>