force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Name__c</columns>
    <columns>Branch_Parent_ID__c</columns>
    <columns>Email__c</columns>
    <columns>Name__c</columns>
    <columns>Phone__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>